crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_3840x2160_fast.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 1.1157
  mean_reprojection_rmse: 8.4069
  p50_translation_error: 0.0458
  p90_translation_error: 0.9336
  p99_translation_error: 2.1728
  p50_rotation_error: 6.6837
  p90_rotation_error: 29.8961
  p99_rotation_error: 55.0066
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0017_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.7252
    - filename: scene_0043_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.0442
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.5031
    - filename: scene_0040_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3212
