crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_3840x2160_gwlf.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9777777777777777
  mean_precision: 1
  mean_rmse: 0.8292
  mean_reprojection_rmse: 0.8631
  p50_translation_error: 0.0115
  p90_translation_error: 0.0914
  p99_translation_error: 0.1739
  p50_rotation_error: 0.154
  p90_rotation_error: 0.6766
  p99_rotation_error: 3.9674
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0017_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.2888
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.5046
    - filename: scene_0018_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.0629
    - filename: scene_0043_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6704
