crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_single_tag_locus_v1_tag36h11_640x480_sota.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 45
  mean_recall: 0.9333333333333333
  mean_precision: 1
  mean_rmse: 0.1727
  mean_reprojection_rmse: 0.1482
  p50_translation_error: 0.0006
  p90_translation_error: 0.0016
  p99_translation_error: 0.0079
  p50_rotation_error: 0.1092
  p90_rotation_error: 0.2619
  p99_rotation_error: 0.6766
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0005_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0018_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
